--- a/alexandria/ui-elements/src/widgets/alexandria-catalog.html
+++ b/alexandria/ui-elements/src/widgets/alexandria-catalog.html
@@ -83,7 +83,7 @@
             cursor: pointer;
             width: calc(100% - 20px);
             display: block;
-            text-align: right;
+            text-align: left;
             font-size: 10pt;
             color: var(--default-primary-color);
         }
@@ -189,7 +189,7 @@
 
         const AlexandriaCatalogDictionary = {
             es: {
-                ClearFilter : "ver todos",
+                ClearFilter : "ver todos los elementos",
                 ShowGroupings : "filtrar catálogo",
                 Close : "cerrar",
                 Back : "< volver al catálogo",
@@ -197,7 +197,7 @@
                 RefreshItems : "actualizar"
             },
             en: {
-                ClearFilter : "view all",
+                ClearFilter : "view all items",
                 ShowGroupings : "filter catalog",
                 Close : "close",
                 Back : "< back to catalog",
