--- a/alexandria/ui-elements/src/widgets/alexandria-view-container-map.html
+++ b/alexandria/ui-elements/src/widgets/alexandria-view-container-map.html
@@ -78,8 +78,8 @@
                 this._pageSize = size;
             },
 
-            _refreshItem : function(item) {
-                this.querySelector("alexandria-catalog-map").refreshItem(item);
+            _refreshItem : function(info) {
+                this.querySelector("alexandria-catalog-map").refreshItem(info);
             },
 
             _refreshItemValidation : function(info) {
