--- a/alexandria/ui-elements/src/widgets/_common/mold/stamps/alexandria-stamp-picture.html
+++ b/alexandria/ui-elements/src/widgets/_common/mold/stamps/alexandria-stamp-picture.html
@@ -7,10 +7,10 @@
     <template>
         <div class="picture layout vertical center-justified" style$="[[_style]]" hidden$="[[!stamp.value.length]]">
             <template is="dom-if" if="[[stamp.singleValue]]">
-                <img class$="single [[stamp.classes]] picture_img_[[stamp.name]]" src="[[stamp.value]]" class="icon" style$="[[_style]]" />
+                <img class$="single [[stamp.classes]] picture_img_[[stamp.name]]" src="[[stamp.value]]" title$="[[stamp.properties.label]]" class="icon" style$="[[_style]]" />
             </template>
             <template is="dom-if" if="[[!stamp.singleValue]]">
-                <l2t-paper-slider id="paperSlider" class$="[[stamp.classes]]" total-slides$="[[stamp.countValues]]" tabIndex="-1" slide-duration="4">
+                <l2t-paper-slider title$="[[stamp.properties.label]]" id="paperSlider" class$="[[stamp.classes]]" total-slides$="[[stamp.countValues]]" tabIndex="-1" slide-duration="4">
                     <template is="dom-repeat" items="[[stamp.values]]" as="picture">
                         <paper-slide><img src="[[picture]]"/></paper-slide>
                     </template>
