alexandria-ui: added editor

--- a/alexandria/ui-elements/src/widgets/dialogs/alpaca.html
+++ b/alexandria/ui-elements/src/widgets/dialogs/alpaca.html
@@ -84,6 +84,9 @@
         padding: 10px 15px 0;
         height: 55px;
     }
+    .toolbar.empty {
+        display: none;
+    }
     .toolbar > div {
         float: right;
         margin-left: 10px;
