alexandria-ui: Added cotton-pdf-viewer to alexandria. Fix mobile click effect selection.

--- a/alexandria/ui-elements/src/widgets/_common/catalog/alexandria-catalog-grouping.html
+++ b/alexandria/ui-elements/src/widgets/_common/catalog/alexandria-catalog-grouping.html
@@ -39,6 +39,9 @@
     </template>
 
     <style>
+        :host {
+            -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+        }
         :host .label {
             font-weight: bold;
             font-size: 11pt;
