--- a/alexandria/ui-elements/src/widgets/_common/catalog/alexandria-catalog-grouping-list.html
+++ b/alexandria/ui-elements/src/widgets/_common/catalog/alexandria-catalog-grouping-list.html
@@ -24,16 +24,16 @@
             </template>
             <template is="dom-repeat" items="[[groupingList]]" as="grouping">
                 <!--<template is="dom-if" if="[[grouping.temporal]]">-->
-                    <!--<li class="grouping">-->
-                        <!--<cotton-zombie display="AlexandriaTimeRangeNavigator" widget="AlexandriaPocketTimeRangeNavigator"></cotton-zombie>-->
-                        <!--<cotton-zombie display="AlexandriaTimeNavigator" widget="AlexandriaPocketTimeNavigator"></cotton-zombie>-->
-                    <!--</li>-->
+                <!--<li class="grouping">-->
+                <!--<cotton-zombie display="AlexandriaTimeRangeNavigator" widget="AlexandriaPocketTimeRangeNavigator"></cotton-zombie>-->
+                <!--<cotton-zombie display="AlexandriaTimeNavigator" widget="AlexandriaPocketTimeNavigator"></cotton-zombie>-->
+                <!--</li>-->
                 <!--</template>-->
                 <!--<template is="dom-if" if="[[!grouping.temporal]]">-->
-                    <li class="grouping">
-                        <paper-icon-button icon="icons:check"></paper-icon-button>
-                        <alexandria-catalog-grouping grouping$="[[grouping]]" on-selection-change="_handleGroupingChange"></alexandria-catalog-grouping>
-                    </li>
+                <li class="grouping">
+                    <paper-icon-button icon="icons:check"></paper-icon-button>
+                    <alexandria-catalog-grouping grouping$="[[grouping]]" on-selection-change="_handleGroupingChange"></alexandria-catalog-grouping>
+                </li>
                 <!--</template>-->
             </template>
         </ul>
@@ -65,6 +65,7 @@
             padding: 0;
             cursor: pointer;
             position: relative;
+            -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
         }
         :host .groupings .grouping paper-icon-button {
             position: absolute;
@@ -165,8 +166,8 @@
             _refresh : function() {
                 this.querySelectorAll("alexandria-catalog-grouping").forEach((grouping) => {
                     if (this._checked) grouping.showCharts();
-                    else grouping.hideCharts();
-                });
+            else grouping.hideCharts();
+            });
                 this._toggleChartsLabel = this._checked ? this.HideCharts : this.ShowCharts;
             }
 
