--- a/alexandria/ui-elements/src/widgets/_common/catalog/alexandria-catalog-list.html
+++ b/alexandria/ui-elements/src/widgets/_common/catalog/alexandria-catalog-list.html
@@ -149,6 +149,9 @@
             color: #777;
             font-size: 10pt;
         }
+        :host .container {
+            -webkit-tap-highlight-color:  rgba(255, 255, 255, 0);
+        }
         :host .embedded_true .container .content, :host .embedded_true .container.expanded .content {
             padding: 5px 0;
             box-shadow: none;
