--- a/alexandria/ui-elements/src/widgets/_common/mold/stamps/alexandria-stamp-preview-operation.html
+++ b/alexandria/ui-elements/src/widgets/_common/mold/stamps/alexandria-stamp-preview-operation.html
@@ -5,7 +5,7 @@
 <link rel="import" href="../../../../../lib/paper-menu/paper-menu.html">
 <link rel="import" href="../../../../../lib/paper-item/paper-item.html">
 <link rel="import" href="../../../../../lib/iron-icon/iron-icon.html">
-<link rel="import" href="../../../../../lib/pdf-browser-viewer/pdf-browser-viewer.html">
+<link rel="import" href="../../../../../lib/cotton-pdf-viewer/cotton-pdf-viewer.html">
 <link rel="import" href="../../../../../lib/iron-resizable-behavior/iron-resizable-behavior.html">
 <link rel="import" href="alexandria-stamp-behavior.html">
 <link rel="import" href="../../alexandria-operation-trigger.html">
@@ -23,7 +23,7 @@
             <paper-dialog id="dialog" no-overlap entry-animation="scale-up-animation" exit-animation="fade-out-animation" on-iron-overlay-closed="_overlayClosed">
                 <paper-icon-button icon="close" on-tap="_close"></paper-icon-button>
                 <div style="height:calc(100% - 40px)">
-                    <pdf-browser-viewer file="[[stamp.properties.document]]" width="100%" height="100%"></pdf-browser-viewer>
+                    <cotton-pdf-viewer file="[[stamp.properties.document]]" width="100%" height="100%"></cotton-pdf-viewer>
                 </div>
             </paper-dialog>
         </div>
